--- a/backend/docker-compose.redis-cluster.yml
+++ b/backend/docker-compose.redis-cluster.yml
@@ -1,69 +1,161 @@
-version: '3.8'
+version: "3.8"
 
 services:
+  # -------------------------
+  # Postgres
+  # -------------------------
+  postgres-container:
+    image: postgres:15-alpine
+    container_name: postgres-container
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: 123456
+      POSTGRES_DB: nexpay
+    ports:
+      - "5432:5432"
+    networks:
+      - redis-ha
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres -d nexpay"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  # -------------------------
+  # Redis Cluster Nodes
+  # -------------------------
   redis-node-1:
     image: redis:7-alpine
     container_name: redis-node-1
-    command: redis-server --port 6379 --cluster-enabled yes --cluster-config-file nodes.conf --cluster-node-timeout 5000 --appendonly yes --protected-mode no
-    ports: ["7001:6379"]
+    command: >
+      redis-server --port 7001
+      --cluster-enabled yes
+      --cluster-config-file nodes.conf
+      --cluster-node-timeout 5000
+      --appendonly yes
+      --protected-mode no
+      --cluster-announce-ip redis-node-1
+      --cluster-announce-port 7001
+      --cluster-announce-bus-port 17001
+    ports:
+      - "7001:7001"
+      - "17001:17001"
     volumes:
       - redis1_data:/data
     networks:
-      - redis-cluster
+      - redis-ha
 
   redis-node-2:
     image: redis:7-alpine
     container_name: redis-node-2
-    command: redis-server --port 6379 --cluster-enabled yes --cluster-config-file nodes.conf --cluster-node-timeout 5000 --appendonly yes --protected-mode no
-    ports: ["7002:6379"]
+    command: >
+      redis-server --port 7002
+      --cluster-enabled yes
+      --cluster-config-file nodes.conf
+      --cluster-node-timeout 5000
+      --appendonly yes
+      --protected-mode no
+      --cluster-announce-ip redis-node-2
+      --cluster-announce-port 7002
+      --cluster-announce-bus-port 17002
+    ports:
+      - "7002:7002"
+      - "17002:17002"
     volumes:
       - redis2_data:/data
     networks:
-      - redis-cluster
+      - redis-ha
 
   redis-node-3:
     image: redis:7-alpine
     container_name: redis-node-3
-    command: redis-server --port 6379 --cluster-enabled yes --cluster-config-file nodes.conf --cluster-node-timeout 5000 --appendonly yes --protected-mode no
-    ports: ["7003:6379"]
+    command: >
+      redis-server --port 7003
+      --cluster-enabled yes
+      --cluster-config-file nodes.conf
+      --cluster-node-timeout 5000
+      --appendonly yes
+      --protected-mode no
+      --cluster-announce-ip redis-node-3
+      --cluster-announce-port 7003
+      --cluster-announce-bus-port 17003
+    ports:
+      - "7003:7003"
+      - "17003:17003"
     volumes:
       - redis3_data:/data
     networks:
-      - redis-cluster
+      - redis-ha
 
   redis-node-4:
     image: redis:7-alpine
     container_name: redis-node-4
-    command: redis-server --port 6379 --cluster-enabled yes --cluster-config-file nodes.conf --cluster-node-timeout 5000 --appendonly yes --protected-mode no
-    ports: ["7004:6379"]
+    command: >
+      redis-server --port 7004
+      --cluster-enabled yes
+      --cluster-config-file nodes.conf
+      --cluster-node-timeout 5000
+      --appendonly yes
+      --protected-mode no
+      --cluster-announce-ip redis-node-4
+      --cluster-announce-port 7004
+      --cluster-announce-bus-port 17004
+    ports:
+      - "7004:7004"
+      - "17004:17004"
     volumes:
       - redis4_data:/data
     networks:
-      - redis-cluster
+      - redis-ha
 
   redis-node-5:
     image: redis:7-alpine
     container_name: redis-node-5
-    command: redis-server --port 6379 --cluster-enabled yes --cluster-config-file nodes.conf --cluster-node-timeout 5000 --appendonly yes --protected-mode no
-    ports: ["7005:6379"]
+    command: >
+      redis-server --port 7005
+      --cluster-enabled yes
+      --cluster-config-file nodes.conf
+      --cluster-node-timeout 5000
+      --appendonly yes
+      --protected-mode no
+      --cluster-announce-ip redis-node-5
+      --cluster-announce-port 7005
+      --cluster-announce-bus-port 17005
+    ports:
+      - "7005:7005"
+      - "17005:17005"
     volumes:
       - redis5_data:/data
     networks:
-      - redis-cluster
+      - redis-ha
 
   redis-node-6:
     image: redis:7-alpine
     container_name: redis-node-6
-    command: redis-server --port 6379 --cluster-enabled yes --cluster-config-file nodes.conf --cluster-node-timeout 5000 --appendonly yes --protected-mode no
-    ports: ["7006:6379"]
+    command: >
+      redis-server --port 7006
+      --cluster-enabled yes
+      --cluster-config-file nodes.conf
+      --cluster-node-timeout 5000
+      --appendonly yes
+      --protected-mode no
+      --cluster-announce-ip redis-node-6
+      --cluster-announce-port 7006
+      --cluster-announce-bus-port 17006
+    ports:
+      - "7006:7006"
+      - "17006:17006"
     volumes:
       - redis6_data:/data
     networks:
-      - redis-cluster
+      - redis-ha
 
-  # Helper container to create the cluster
+  # -------------------------
+  # Redis Cluster Init
+  # -------------------------
   redis-cluster-init:
     image: redis:7-alpine
+    container_name: redis-cluster-init
     depends_on:
       - redis-node-1
       - redis-node-2
@@ -72,18 +164,50 @@ services:
       - redis-node-5
       - redis-node-6
     command: >
-      sh -c "sleep 10 && 
-             redis-cli --cluster create 
-             redis-node-1:6379 
-             redis-node-2:6379 
-             redis-node-3:6379 
-             redis-node-4:6379 
-             redis-node-5:6379 
-             redis-node-6:6379 
-             --cluster-replicas 1 
-             --cluster-yes"
+      sh -c "sleep 10 && redis-cli --cluster create
+      redis-node-1:7001 redis-node-2:7002 redis-node-3:7003
+      redis-node-4:7004 redis-node-5:7005 redis-node-6:7006
+      --cluster-replicas 1 --cluster-yes"
     networks:
-      - redis-cluster
+      - redis-ha
+
+  # -------------------------
+  # Backend
+  # -------------------------
+  backend:
+    build: .
+    container_name: fiber-backend
+    ports:
+      - "5001:5001"
+    environment:
+      STAGE_STATUS: dev
+      SERVER_HOST: 0.0.0.0
+      SERVER_PORT: 5001
+      REDIS_MODE: cluster
+      REDIS_CLUSTER_ADDRS: redis-node-1:7001,redis-node-2:7002,redis-node-3:7003,redis-node-4:7004,redis-node-5:7005,redis-node-6:7006
+      REDIS_PASSWORD: secret
+      DB_TYPE: pgx
+      DB_HOST: postgres-container
+      DB_PORT: 5432
+      DB_USER: postgres
+      DB_PASSWORD: 123456
+      DB_NAME: nexpay
+      DB_SSL_MODE: disable
+      DB_MAX_CONNECTIONS: 100
+      DB_MAX_IDLE_CONNECTIONS: 10
+      DB_MAX_LIFETIME_CONNECTIONS: 2
+      JWT_SECRET_KEY: secret
+    networks:
+      - redis-ha
+    depends_on:
+      - postgres-container
+      - redis-node-1
+      - redis-node-2
+      - redis-node-3
+      - redis-node-4
+      - redis-node-5
+      - redis-node-6
+      - redis-cluster-init
 
 volumes:
   redis1_data:
@@ -94,5 +218,5 @@ volumes:
   redis6_data:
 
 networks:
-  redis-cluster:
+  redis-ha:
     driver: bridge
